--- a/public/locales/zh/projects/_common.json
+++ b/public/locales/zh/projects/_common.json
@@ -4,6 +4,8 @@
   "projectDemo": "專案展示",
   "keyContributions": "核心貢獻",
   "projectShowcase": "專案展示",
-  "codeSnippet": "核心程式碼"
+  "codeSnippet": "核心程式碼",
+  "technicalSpotlight": "技術亮點",
+  "technicalChallenges": "技術挑戰與解決方案"
 }
 
