--- a/public/locales/zh/projects/berify.json
+++ b/public/locales/zh/projects/berify.json
@@ -114,44 +114,54 @@
         "summary": "遊戲化與電商整合",
         "blocks": [
           {
-            "type": "architecture",
-            "title": "三層架構模型",
-            "layers": [
-              {
-                "name": "Rule (品牌規則)",
-                "desc": "定義行銷活動範疇、產品批次關聯與 Shopify 獎勵品項",
-                "role": "配置"
-              },
-              {
-                "name": "Collection (參與進度)",
-                "desc": "管理用戶收集進度，並自動化觸發 Shopify Draft Order 兌換流程",
-                "role": "進度狀態"
-              },
-              {
-                "name": "Item (實體標籤)",
-                "desc": "利用資料庫 @unique 約束，確保單一 NFC 標籤在全系統的物理唯一性",
-                "role": "唯一資產"
-              }
-            ]
+            "type": "list",
+            "title": "目標",
+            "items": ["提升 App 使用率與用戶活躍度，並透過遊戲化機制提升合作廠商的商品回購率與轉化率。"]
           },
           {
             "type": "grid",
             "title": "核心功能",
             "items": [
               {
-                "icon": "🛡️",
-                "title": "物理層級防重複",
-                "desc": "在 `CollectionItem` 實作 `@unique` 約束，確保單一 NFC 標籤不可被重複收藏。"
+                "icon": "🧩",
+                "title": "多維度行銷活動配置 (Rule)",
+                "desc": "品牌商可根據特定商品批次，綁定收集規則與 Shopify 獎勵誘因，達成精準行銷。"
               },
               {
                 "icon": "🔄",
-                "title": "跨批次關聯校驗",
-                "desc": "透過 `item.tag.batch.id` 關聯檢查，確保用戶收集的是「不同批次」的商品。"
+                "title": "用戶忠誠度循環管理 (Collection)",
+                "desc": "建立用戶專屬的收藏容器，透過進度追蹤與兌換，提高用戶回流率。"
               },
               {
-                "icon": "🛍️",
-                "title": "Shopify 自動化",
-                "desc": "集滿自動觸發 `DraftOrder` 建立，生成 100% 折扣連結，完成 O2O 閉環。"
+                "icon": "🏷️",
+                "title": "物理資產數位化核銷 (Item)",
+                "desc": "將實體 NFC 標籤轉化為唯一的數位資產，透過資料庫層級的防弊機制，確保行銷資源分配的公正性。"
+              }
+            ]
+          },
+          {
+            "type": "workflow",
+            "title": "架構設計",
+            "steps": [
+              {
+                "step": "1",
+                "title": "物理資產數位綁定",
+                "desc": "實作 CollectionItem 邏輯，透過 Prisma 的 @unique 綁定 NFC 標籤，確保實體資產不可重複登錄。"
+              },
+              {
+                "step": "2",
+                "title": "關聯式跨批次校驗",
+                "desc": "透過 item.tag.batch.id 深度關聯檢查，確保單一進度內僅包含來自「不同批次」的標籤。"
+              },
+              {
+                "step": "3",
+                "title": "自動化電商結算",
+                "desc": "整合 Shopify DraftOrder API，自動建立帶有 100% 折扣的獎勵訂單 (Draft Order) 並同步庫存，直接生成領獎連結。"
+              },
+              {
+                "step": "4",
+                "title": "O2O 轉化數據閉環",
+                "desc": "將實體標籤蒐集進度與 Shopify 訂單對接，打通線下互動至線上交易的數據斷點，實現行銷效果的可視化追蹤"
               }
             ]
           }
@@ -159,7 +169,7 @@
         "codeSnippet": {
           "title": "資料模型與關聯校驗實作",
           "language": "typescript",
-          "code": "// 1. 物理層級防重複 (Schema)\nmodel CollectionItem {\n  tagTokenId String @unique // 全表唯一\n  tag        Tag    @relation(...) // 透過關聯存取 Batch 資訊\n}\n\n// 2. 跨批次校驗 (Business Logic)\n// 需透過關聯 (Tag -> Batch) 獲取批次資訊進行比對\nconst batchIds = collection.items.map(item => item.tag.batch.id);\nif (batchIds.includes(currentBatchId)) {\n   // 若已包含此批次，則不允許加入當前進度\n   openNewCollection();\n}"
+          "code": "// 1. 物理層級防重複 (Schema)\nmodel CollectionItem {\n  tagTokenId String @unique // 全表唯一\n  tag        Tag    @relation(...) // 透過關聯存取 Batch 資訊\n}\n\n// 2. 跨批次校驗 (Business Logic)\n// 需透過關聯 (Tag -> Batch) 獲取批次資訊進行比對\n// 實作：檢查用戶現有進度，若該進度已包含此批次，則尋找下一個或開啟新進度\nconst batchIds = collection.collectionItems.map(item => item.tag.batch.id);\nif (batchIds.includes(currentBatchId)) {\n   // 若已包含此批次，則不允許加入當前進度，並觸發開啟新進度邏輯\n   openNewCollection();\n}"
         }
       },
       {
@@ -170,72 +180,58 @@
         "summary": "互動系統",
         "blocks": [
           {
-            "type": "workflow",
-            "title": "雙指標架構",
-            "steps": [
-              { "step": "1", "title": "結構化撈取", "desc": "rootReplyCommentId 快速定位掛載留言" },
-              { "step": "2", "title": "原子化軟刪除", "desc": "實作 isDeleted 標記確保可追溯性" },
-              { "step": "3", "title": "UI 連動隱藏", "desc": "讀取查詢過濾根節點狀態" }
+            "type": "list",
+            "title": "目標",
+            "items": [
+              "在產品頁面建立客戶間的即時討論區，透過 P2P 交流促進社群互動，並協助廠商精準獲取客戶的真實反饋與產品需求。"
             ]
           },
           {
             "type": "grid",
-            "title": "核心架構分析",
+            "title": "核心功能",
             "items": [
-              { "icon": "⚡", "title": "查詢效能", "desc": "從 O(n) 優化為 O(1) 索引掃描" },
-              { "icon": "📝", "title": "Schema 設計", "desc": "雙指標架構優化" },
-              { "icon": "🛡️", "title": "邏輯一致性", "desc": "軟刪除與 UI 狀態連動" }
-            ]
-          }
-        ],
-        "codeSnippet": {
-          "title": "雙指標 Schema 與高效查詢邏輯",
-          "language": "typescript",
-          "code": "// 1. 優化遞迴讀取瓶頸\nmodel Comment {\n  id                 Int     @id @default(autoincrement())\n  replyCommentId     Int?    // 父層節點\n  rootReplyCommentId Int?    // 根節點\n  isDeleted          Boolean @default(false)\n}\n\n// 2. 高效查詢實作\n// 避開遞迴，單一 Query 結構一次性獲取完整討論串\nconst thread = await db.comment.findMany({\n  where: { \n    rootReplyCommentId: rootId,\n    isDeleted: false \n  },\n  include: { /* 嵌套關聯 */ }\n});"
-        }
-      },
-      {
-        "id": "nfc",
-        "title": "NFC Orchestration",
-        "role": "狀態設計與優化",
-        "icon": "layout",
-        "summary": "虛實整合橋樑",
-        "blocks": [
-          {
-            "type": "workflow",
-            "title": "NFC 狀態流轉",
-            "steps": [
-              { "step": "1", "title": "硬體觸發", "desc": "NfcManager 捕捉 NDEF 事件" },
-              { "step": "2", "title": "異步驗證", "desc": "解析 Payload -> 調用 createScan API" },
-              { "step": "3", "title": "狀態決策", "desc": "成功則延遲導航，失敗則錯誤路由" },
-              { "step": "4", "title": "副作用執行", "desc": "Success 頁面掛載觸發 Notification" }
+              {
+                "icon": "🤝",
+                "title": "驗證式 P2P 共創社群",
+                "desc": "透過產品掃描進入專屬討論空間，連結真實用戶分享使用經驗 (P2P)，形成高質量的社群互助，並直接轉化為產品迭代依據。"
+              },
+              {
+                "icon": "📊",
+                "title": "結構化客戶聲音 (VoC) 管理",
+                "desc": "將散亂的留言轉化為結構化數據，讓廠商能依據產品批次 (Batch) 集中檢視用戶反饋，有效追溯並管理不同產線的評價。"
+              }
             ]
           },
           {
-            "type": "challenges",
-            "title": "挑戰與解決方案",
-            "items": [
+            "type": "workflow",
+            "title": "架構設計",
+            "steps": [
               {
-                "title": "異步狀態邏輯對接",
-                "symptom": "NFC 掃描涉及硬體與網絡請求，若缺乏管理容易導致 UI 狀態不一致。",
-                "solution": "於共享 `useNormalTag` Hook 增加異步狀態邏輯，將 NDEF 解析與 Promise 驗證鏈高度封裝，確保硬體觸發到業務生效的流程。",
-                "result": "將不可測的硬體行為轉化為標準業務狀態，提升標籤驗證的運行穩定性。"
+                "step": "1",
+                "title": "非遞迴式對話扁平化設計",
+                "desc": "利用 rootReplyCommentId 建立單層深度關聯，將深層巢狀留言從 O(n) 的遞迴查詢優化為 O(1) 次數的查詢，徹底解決 N+1 查詢瓶頸。"
               },
               {
-                "title": "錯誤診斷與路由決策",
-                "symptom": "硬體與後端回傳錯誤類型繁雜（如仿冒、停用、超時），需導引至正確的修復路徑。",
-                "solution": "獨立實作 `onRedirectScanResult` 防禦性路由，利用 Switch-Case 對接多種 API 異常碼。",
-                "result": "確保 100% 的異常場景皆有對應的 UI 指引，提升產品防偽驗證的引導效率。"
+                "step": "2",
+                "title": "邏輯軟刪除與動態過濾",
+                "desc": "採用 isDeleted 狀態標記取代實體刪除，保留數據可追溯性；並透過讀取層的根節點過濾機制，動態隱藏整串討論，確保前端視覺的一致性。"
+              },
+              {
+                "step": "3",
+                "title": "分頁式高效能互動封裝",
+                "desc": "採用樂觀介面更新策略，配合後端分頁機制，實現零延遲的留言反饋與高效的瀏覽體驗。"
               }
             ]
           }
         ],
         "codeSnippet": {
-          "title": "路由與錯誤處理邏輯",
+          "title": "核心程式碼",
           "language": "typescript",
-          "code": "const onRedirectScanResult = (error?: string) => {\n  switch (error) {\n    case 'Token is not exist.':\n    case 'tokenId and UID do not match.':\n      // 處理偽造或錯誤標籤\n      navigation.navigate(routes.scanResult.verifyError);\n      break;\n    case 'This tag is deactivated.':\n      // 處理已停用標籤\n      navigation.navigate(routes.scanResult.inactive);\n      break;\n    default:\n      if (!error) {\n        // 成功路徑：延遲導航以確保視覺體驗連貫\n        setTimeout(() => navigation.navigate(routes.scanResult.success), DELAY_MS);\n      } else {\n        navigation.navigate(routes.scanResult.timeOut);\n      }\n  }\n};"
+          "code": "// 1. 優化遞迴讀取瓶頸\nmodel Comment {\n  id                 Int     @id @default(autoincrement())\n  replyCommentId     Int?    // 父層節點\n  rootReplyCommentId Int?    // 根節點\n  isDeleted          Boolean @default(false)\n}\n\n// 2. 高效查詢實作\n// 透過 include 一次帶出所有關聯子留言，避開 N+1\nconst comments = await db.comment.findMany({\n  where: { \n    batchId: currentBatchId, // 鎖定批次\n    rootReplyCommentId: null // 只查「樓主」\n    isDeleted: false         // 過濾已刪除的主留言\n  },\n  include: {\n    // 關鍵優化：利用單次 Join 帶出整串討論 (O(1))\n    rootReplycomments: true\n    where: { isDeleted: false }\n  }\n});"
         }
-      },
+      }
+    ],
+    "technicalChallenges": [
       {
         "id": "infrastructure",
         "title": "跨平台建置架構",
@@ -258,15 +254,15 @@
             "title": "挑戰與解決方案",
             "items": [
               {
-                "title": "Xcode 升級適配",
-                "symptom": "Xcode 14.3+ Swift Interface 驗證失敗。",
-                "solution": "透過 Podfile `post_install` 設定 `-no-verify-emitted-module-interface` 並統一 Deployment Target (12.4)。",
+                "title": "Xcode 工具鏈適配",
+                "symptom": "Xcode 14.3+ 更嚴格的 Swift 介面驗證導致 Binary SDK (Cybavo) 編譯失敗。",
+                "solution": "實作 Podfile post_install 腳本，自動化注入 -no-verify-emitted-module-interface 旗標並統一開發環境。",
                 "result": "解決團隊 Binary Framework 建置失敗的問題。"
               },
               {
-                "title": "Android SDK 與依賴生命週期",
-                "symptom": "Android Incode SDK v2.6.3 相機模組崩潰。",
-                "solution": "診斷 Native Core 錯誤，回退至穩定版 2.6.1 並主導遷移私有 S3 Tarball 至官方 @incode-sdks Scoped Package。",
+                "title": "Android 原生 SDK 穩定性管理",
+                "symptom": "特定 Incode SDK 版本導致 Android 執行期相機模組崩潰。",
+                "solution": "執行精準版本回退，並主導從 S3 Tarball 遷移至官方 Scoped Package (@incode-sdks) 進行依賴規範化管理。",
                 "result": "消除執行期崩潰，確保 IDV 驗證流程穩定。"
               }
             ]
@@ -303,16 +299,16 @@
                 "title": "原生生命週期與 UI 重置",
                 "badge": "Lifecycle Control",
                 "icon": "🔄",
-                "symptom": "掃描新標籤時，若舊有結果頁面未關閉導致 UI 衝突。",
-                "solution": "實作 useLandingController 機制遞迴清理視圖控制器。",
+                "symptom": "掃描新標籤時，若舊有結果或錯誤頁面未清理，會導致 UI 衝突或導航失敗。",
+                "solution": "實作 useLandingController 遞迴清理機制，確保每次觸發均從初始 Landing 狀態啟動。",
                 "result": "確保每次掃描均能從初始狀態觸發，提升導航可靠性。"
               },
               {
                 "title": "硬體協議擴展與相容性",
                 "badge": "Protocol Ext",
                 "icon": "🏷️",
-                "symptom": "需要支援非標準的「Tail Tag」硬體規範。",
-                "solution": "撰寫 NDEF 原始封包解析邏輯，動態識別特定 URL 參數（如 ?data=00c）。",
+                "symptom": "業務需求需支援非標準的「Tail Tag」特殊硬體規範。",
+                "solution": "撰寫 NDEF 原始封包解析邏輯，動態識別特定 URL 參數（如 ?data=00c）並映射至對應 API。",
                 "result": "成功擴展硬體支援度，相容特殊規格標籤。"
               }
             ]
