--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -4,6 +4,8 @@
   "projectDemo": "Project Demo",
   "keyContributions": "Key Contributions",
   "projectShowcase": "Project Showcase",
-  "codeSnippet": "Core Code"
+  "codeSnippet": "Core Code",
+  "technicalSpotlight": "Technical Spotlight",
+  "technicalChallenges": "Technical Challenges & Solutions"
 }
 
